# unique_name_generator

./: LICENSE.txt  README.md  convert_json.sh  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
data/: README.md
data/jsonnet/: names_rpgstat.jsonnet
interfaces/: constraints.py  generator.py  tags.py
microscripts/: linear.py
src/: README.md
src/generators/: linear.py
src/interfaces/: domain.py  generator.py  unordered_to_ordered.py
src/unique_name_generator/generators/: dummy.py  factory.py  linear.py
src/unique_name_generator/interfaces/: domain.py  generator.py  tags.py  unordered_to_ordered.py
tests/: factory_test.py
