[metadata]
name = unique_name_generator
version = 0.0.1
author = Pegasust
author_email = pegasucksgg@gmail.com
description = A package that generates unique names based on given tags
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pegasust/unique_name_generator
project_urls = 
    Bug Tracker = https://github.com/Pegasust/unique_name_generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    =src
packages = find:
python_requires = >= 3.8
install_requires = 
    jsonnet
    pytest

[options.packages.find]
where = src